fix about section overflow with media query

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -69,6 +69,9 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
             gap: 2rem;
+            @media only screen and (max-width: $breakpoint-md) { 
+                grid-template-columns: 1fr;
+            }
         } 
 
         &--projects {
